k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-store
  namespace: bookstore  # Change this from book-store to bookstore
  labels:
    app: book-store
    service: book-store
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  selector:
    app: book-store
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  - name: https
    port: 443
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
